--- a/templates/seafile.conf.erb
+++ b/templates/seafile.conf.erb
@@ -2,7 +2,7 @@
 
 server {
     listen 8000;
-    server_name <%= @seafile_domain ->;
+    server_name <%= @seafile_domain %>;
     rewrite ^ https://$http_host$request_uri? permanent;    # force redirect http to https
 }
 
