Added basic user/group management. Minor bugfixes.

--- a/templates/seafile_extract.sh.erb
+++ b/templates/seafile_extract.sh.erb
@@ -20,3 +20,4 @@ mv /tmp/$FOLDER /opt/seafile/$FOLDER
 mkdir -p <%= @install_dir -%>/installed
 mv $FILE <%= @install_dir -%>/installed
 
+# TODO - Build case to fix syntax differences in architecture (_x86-64 vs _x86_64)
